--- a/templates/Account-table.html
+++ b/templates/Account-table.html
@@ -10,11 +10,9 @@
     <title>Account table</title>
     <link rel="stylesheet" href="{% static 'css/stay_sharp/nicepage.css' %}" media="screen">
     <link rel="stylesheet" href="{% static 'css/stay_sharp/Account-table.css' %}" media="screen">
-    <script class="u-script" type="text/javascript" src="{% static 'js/stay_sharp/jquery.js' %}"
-    "="" defer=""></script>
-    <script class="u-script" type="text/javascript" src="{% static 'js/stay_sharp/nicepage.js' %}"
-    "="" defer=""></script>
-    <meta name="generator" content="Nicepage 4.16.0, nicepage.com">
+    <script class="u-script" type="text/javascript" src="{% static 'js/stay_sharp/jquery.js' %}" defer></script>
+    <script class="u-script" type="text/javascript" src="{% static 'js/stay_sharp/nicepage.js' %}" defer></script>
+    <meta name="generator" content="Nicepage 4.17.10, nicepage.com">
     <link id="u-theme-google-font" rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
 
@@ -40,7 +38,7 @@
              data-responsive-from="LG">
             <div class="menu-collapse"
                  style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; text-transform: uppercase;">
-                <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-color u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-decoration u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
+                <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-color u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-decoration u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base u-text-palette-3-light-1"
                    href="#section1"
                    data-lang-en="{&quot;content&quot;:&quot;<svg class=\&quot;u-svg-link\&quot; viewBox=\&quot;0 0 24 24\&quot;><use xmlns:xlink=\&quot;http://www.w3.org/1999/xlink\&quot; xlink:href=\&quot;#menu-hamburger\&quot;></use></svg><svg class=\&quot;u-svg-content\&quot; version=\&quot;1.1\&quot; id=\&quot;menu-hamburger\&quot; viewBox=\&quot;0 0 16 16\&quot; x=\&quot;0px\&quot; y=\&quot;0px\&quot; xmlns:xlink=\&quot;http://www.w3.org/1999/xlink\&quot; xmlns=\&quot;http://www.w3.org/2000/svg\&quot;>    <g>        <rect y=\&quot;1\&quot; width=\&quot;16\&quot; height=\&quot;2\&quot;></rect>        <rect y=\&quot;7\&quot; width=\&quot;16\&quot; height=\&quot;2\&quot;></rect>        <rect y=\&quot;13\&quot; width=\&quot;16\&quot; height=\&quot;2\&quot;></rect>    </g></svg>&quot;,&quot;href&quot;:&quot;#section1&quot;}">
                     <svg class="u-svg-link" viewBox="0 0 24 24">
@@ -66,9 +64,7 @@
                     </li>
                     <li class="u-nav-item"><a
                             class="u-border-2 u-border-active-palette-4-light-1 u-border-hover-palette-4-light-1 u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-button-style u-nav-link u-text-active-palette-4-light-1 u-text-hover-palette-4-light-1 u-text-palette-3-light-1"
-                            href="{% url 'calculation' %}#carousel_7650" data-page-id="317024594"
-                            data-lang-en="{&quot;content&quot;:&quot;FeedBack&quot;,&quot;href&quot;:&quot;#&quot;}"
-                            style="padding: 10px 0px;">FeedBack</a>
+                            href="{% url 'choose_the_angle' %}" style="padding: 10px 0px;">Choose the angle</a>
                     </li>
                     <li class="u-nav-item"><a
                             class="u-border-2 u-border-active-palette-4-light-1 u-border-hover-palette-4-light-1 u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-button-style u-nav-link u-text-active-palette-4-light-1 u-text-hover-palette-4-light-1 u-text-palette-3-light-1"
@@ -78,11 +74,13 @@
                     </li>
                     <li class="u-nav-item"><a
                             class="u-border-2 u-border-active-palette-4-light-1 u-border-hover-palette-4-light-1 u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-button-style u-nav-link u-text-active-palette-4-light-1 u-text-hover-palette-4-light-1 u-text-palette-3-light-1"
-                            href="{% url 'drawing' %}" style="padding: 10px 0px;">Drawing</a>
+                            href="{% url 'calculation' %}#feedback" data-page-id="317024594"
+                            data-lang-en="{&quot;content&quot;:&quot;FeedBack&quot;,&quot;href&quot;:&quot;#&quot;}"
+                            style="padding: 10px 0px;">FeedBack</a>
                     </li>
                     <li class="u-nav-item"><a
                             class="u-border-2 u-border-active-palette-4-light-1 u-border-hover-palette-4-light-1 u-border-no-left u-border-no-right u-border-no-top u-border-palette-3-base u-button-style u-nav-link u-text-active-palette-4-light-1 u-text-hover-palette-4-light-1 u-text-palette-3-light-1"
-                            href="{%  url 'login' %}"
+                            href="{% url 'login' %}"
                             data-lang-en="{&quot;content&quot;:&quot;Login&quot;,&quot;href&quot;:&quot;Login.html&quot;}"
                             style="padding: 10px 0px;">Login</a>
                     </li>
@@ -95,16 +93,17 @@
                             <li class="u-nav-item"><a class="u-button-style u-nav-link" href="{% url 'main' %}"
                                                       data-lang-en="{&quot;content&quot;:&quot;Main&quot;,&quot;href&quot;:&quot;Main.html&quot;}">Main</a>
                             </li>
-                            <li class="u-nav-item"><a class="u-button-style u-nav-link"
-                                                      href=href="{% url 'calculation' %}#carousel_7650" data-page-id="317024594"
-                                                      data-lang-en="{&quot;content&quot;:&quot;FeedBack&quot;,&quot;href&quot;:&quot;#&quot;}">FeedBack</a>
+                            <li class="u-nav-item"><a class="u-button-style u-nav-link" href="{% url 'choose_the_angle' %}">Choose
+                                the angle</a>
                             </li>
                             <li class="u-nav-item"><a class="u-button-style u-nav-link" href="{% url 'calculation' %}"
                                                       data-lang-en="{&quot;content&quot;:&quot;Calculation&quot;,&quot;href&quot;:&quot;#&quot;}">Calculation</a>
                             </li>
-                            <li class="u-nav-item"><a class="u-button-style u-nav-link" href="{% url 'drawing' %}">Drawing</a>
+                            <li class="u-nav-item"><a class="u-button-style u-nav-link"
+                                                      href="{% url 'calculation' %}#feedback" data-page-id="317024594"
+                                                      data-lang-en="{&quot;content&quot;:&quot;FeedBack&quot;,&quot;href&quot;:&quot;#&quot;}">FeedBack</a>
                             </li>
-                            <li class="u-nav-item"><a class="u-button-style u-nav-link" href="{%  url 'login' %}"
+                            <li class="u-nav-item"><a class="u-button-style u-nav-link" href="{% url 'login' %}"
                                                       data-lang-en="{&quot;content&quot;:&quot;Login&quot;,&quot;href&quot;:&quot;Login.html&quot;}">Login</a>
                             </li>
                         </ul>
@@ -116,8 +115,8 @@
         </nav>
     </div>
 </header>
-<section class="u-align-center u-clearfix u-image u-lightbox u-parallax u-shading u-section-1" id="account_table"
-         data-image-width="1435" data-image-height="1000">
+<section class="skrollable u-align-center u-clearfix u-image u-lightbox u-parallax u-shading u-section-1"
+         id="account_table" data-image-width="1435" data-image-height="1000">
     <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-expanded-width u-table u-table-responsive u-table-1">
             <table class="u-table-entity u-table-entity-1">
