--- a/static/css/stay_sharp/Login.css
+++ b/static/css/stay_sharp/Login.css
@@ -4,12 +4,12 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 868px;
+  min-height: 100vh;
 }
 
 .u-section-1 .u-layout-wrap-1 {
   margin-top: 82px;
-  margin-bottom: 43px;
+  margin-bottom: 60px;
 }
 
 .u-section-1 .u-layout-cell-1 {
@@ -26,14 +26,14 @@
 }
 
 .u-section-1 .u-form-1 {
-  height: 241px;
+  height: 255px;
   width: 446px;
-  margin: 37px 124px 0 0;
+  margin: 37px auto 0;
 }
 
 .u-section-1 .u-label-1 {
   font-size: 1.25rem;
-  font-weight: normal;
+  font-weight: 500;
 }
 
 .u-section-1 .u-form-group-2 {
@@ -42,12 +42,20 @@
 
 .u-section-1 .u-label-2 {
   font-size: 1.25rem;
-  font-weight: normal;
+  font-weight: 500;
 }
 
 .u-section-1 .u-btn-1 {
   background-image: none;
   font-size: 1rem;
+}
+
+.u-section-1 .u-btn-2 {
+  border-style: none none solid;
+  font-size: 1.125rem;
+  font-weight: normal;
+  margin: -55px auto 0 82px;
+  padding: 4px 0;
 }
 
 .u-section-1 .u-layout-cell-2 {
@@ -70,12 +78,12 @@
 
 .u-section-1 .u-label-3 {
   font-size: 1.25rem;
-  font-weight: 700;
+  font-weight: 500;
 }
 
 .u-section-1 .u-label-4 {
   font-size: 1.25rem;
-  font-weight: 700;
+  font-weight: 500;
 }
 
 .u-section-1 .u-form-group-6 {
@@ -84,7 +92,7 @@
 
 .u-section-1 .u-label-5 {
   font-size: 1.25rem;
-  font-weight: 700;
+  font-weight: 500;
 }
 
 .u-section-1 .u-form-group-7 {
@@ -93,10 +101,10 @@
 
 .u-section-1 .u-label-6 {
   font-size: 1.25rem;
-  font-weight: 700;
+  font-weight: 500;
 }
 
-.u-section-1 .u-btn-2 {
+.u-section-1 .u-btn-3 {
   background-image: none;
 }
 
@@ -119,22 +127,18 @@
 
   .u-section-1 .u-form-1 {
     margin-top: 11px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .u-section-1 .u-label-1 {
-    font-weight: 700;
-  }
-
-  .u-section-1 .u-label-2 {
-    font-weight: 700;
   }
 
   .u-section-1 .u-btn-1 {
     padding-top: 5px;
     padding-bottom: 5px;
     font-size: 1.125rem;
+  }
+
+  .u-section-1 .u-btn-2 {
+    font-weight: 700;
+    margin-top: -50px;
+    margin-left: 60px;
   }
 
   .u-section-1 .u-container-layout-2 {
@@ -156,13 +160,17 @@
     margin-right: auto;
   }
 
-  .u-section-1 .u-btn-2 {
+  .u-section-1 .u-btn-3 {
     padding-top: 5px;
     padding-bottom: 5px;
   }
 }
 
 @media (max-width: 1199px) {
+   .u-section-1 {
+    background-position: 50% 50%;
+  }
+
   .u-section-1 .u-sheet-1 {
     min-height: 640px;
   }
@@ -173,6 +181,11 @@
 
   .u-section-1 .u-form-1 {
     width: 430px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-top: -53px;
+    margin-left: 17px;
   }
 
   .u-section-1 .u-layout-cell-2 {
@@ -190,11 +203,15 @@
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 100px;
+    min-height: 523px;
   }
 
   .u-section-1 .u-form-1 {
     width: 344px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-top: -50px;
   }
 
   .u-section-1 .u-layout-cell-2 {
@@ -211,15 +228,32 @@
     min-height: 268px;
   }
 
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 326px;
+  }
+
   .u-section-1 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 0 10px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-left: 217px;
   }
 }
 
 @media (max-width: 575px) {
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 287px;
+  }
+
   .u-section-1 .u-text-1 {
     font-size: 1.5rem;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-left: 20px;
+    padding-right: 7px;
+    padding-left: 6px;
   }
 
   .u-section-1 .u-text-2 {
